
11-Nov-2007 (Lars Duening)
  - (mstrings.c) mstr_rn_str() now allows a starting position at the
       end of the input string (Bug #509).

11-Nov-2007 (Gnomi)
  - (actions.c) Improvements for the removal of actions added by shadows
       (Bug #514).
  - (prolang.y) After two consecutive inline closures within the same
       function, the line number information was incorrect (Bug #510).
       

14-Oct-2007 (Lars Duening)  (3.3.716)
  - Created snapshot.

14-Oct-2007 (Gnomi)
  - (prolang.y, lex.c) UNKNOWN identifiers are kept around until the
       end of the compilation, as some parser rules can look-ahead multiple
       tokens pointing to the same UNKNOWN identifier, so an early free
       will lead to references to invalid memory. Keeping them that
       long is a bit of overkill, but more future-proof (Bug #494).
  - (prolang.y) Struct names are searched only the global namespace
       as that is where structs are defined. Searched in the local
       namespace can get the driver confused with references to
       undefined structs. (Bug #493)
  - (simul_efun.c) If a simul_efun object appeared before being blessed
       explicitely, it may be an old backup copy. This situation is
       now rejected as the variable/function definitions may differ
       subtly. (Bug #489)

13-Oct-2007 (Lars Duening)
  - (interpret, simulate.c) Changed the apply cache counters to 'unsigned
       long' to reduce the possibility of an overflow (Bug #520).
  - (interpret.c) setup_new_frame() now updates the csp->funstart entry
       by itself, instead of having the caller do it. This is not just
       more convenient, but also avoids problems with possible errors
       during its execution (as the error handling will try to create
       a stack trace). (Bug #495)

07-Oct-2007 (Lars Duening)
  - (comm.c) When in charmode, don't attempt to read in as much data
       as the buffer has left space: otherwise the handling of such an